--- a/README
+++ b/README
@@ -1,11 +1,16 @@
-NETS
+# Dobots
 
-Nets contains all algorithms developed at Almende. Our algorithms are tailored for 
-applications that have to do with networks. Networks (or nets) of humans, machines,
-or (slightly exaggerated) neurons. Our research concerns the use of local mechanisms
-to bring about global behaviour. However, besides that we also develop standard or
-state-of-the-art techniques that have to do with concrete practical problems of 
-machine learning, artificial intelligence, and networks of sensors, smartphones, and
-robots. 
+## Introduction
 
-Documentation is available on http://almende.github.com/nets
+You can find more information on our company at [dobots.nl](http://www.dobots.nl). We are a team of people that enjoy mathematics, robotics, and machine learning.
+
+Check also:
+
+* [http://dobots.github.io/aim](http://dobots.github.io/aim)
+* [https://github.com/dobots](https://github.com/dobots)
+* [http://dobots.github.io](http://dobots.github.io/)
+
+## Open source
+
+Many of our tools are open source, enjoy!
+
